Adicionado as cargas horárias

--- a/Index/index.html
+++ b/Index/index.html
@@ -30,30 +30,54 @@
             <p class="ch">60</p>
         <h2>Terceiro Semestre</h2>
             <p class="mat">LPOO I</p>
+            <p class="ch">60</p>
             <p class="mat">Estrutura de dados</p>
+            <p class="ch">60</p>
             <p class="mat">Análise de projeto de Sistemas</p>
+            <p class="ch">60</p>
             <p class="mat">Laboratório de Redes de Computadores</p>
+            <p class="ch">60</p>
             <p class="mat">Fundamentos de Eletricidade e Instalação de Hardware</p>
-            <p class="mat">Interação Humano-Computador</p>
+            <p class="ch">60</p>
+            <p class="mat">Interação Humano-Computador</p>            
+            <p class="ch">60</p>
         <h2>Quarto Semestre</h2>
             <p class="mat">LPOO II</p>
+            <p class="ch">60</p>
             <p class="mat">Modelagem de banco de dados</p>
+            <p class="ch">60</p>
             <p class="mat">Engenharia de software I</p>
+            <p class="ch">60</p>
             <p class="mat">Metodologia da pesquisa</p>
+            <p class="ch">60</p>
             <p class="mat">Programação para dispositivos web</p>
+            <p class="ch">60</p>
             <p class="mat">Introdução a segurança da informação</p>
+            <p class="ch">60</p>
         <h2>Quinto Semestre</h2>
             <p class="mat">Programação web I</p>
+            <p class="ch">60</p>
             <p class="mat">Banco de dados</p>
+            <p class="ch">60</p>
             <p class="mat">Engenharia de software I</p>
+            <p class="ch">60</p>
             <p class="mat">Projeto de inovação</p>
+            <p class="ch">60</p>
             <p class="mat">Optativa I</p>
+            <p class="ch">60</p>
             <p class="mat">Sistemas distribuídos</p>
+            <p class="ch">60</p>
         <h2>Sexto Semestre</h2>
             <p class="mat">Programação web II</p>
+            <p class="ch">60</p>
             <p class="mat">Gerência de projetos</p>
+            <p class="ch">60</p>
             <p class="mat">Optativa II</p>
+            <p class="ch">60</p>
             <p class="mat">TCC</p>
+            <p class="ch">60</p>
             <p class="mat">Empreendorismo</p>
+            <p class="ch">60</p>
             <p class="mat">Relações étnicos-raciais</p>
+            <p class="ch">60</p>
 </body>
