--- a/Index/index.html
+++ b/Index/index.html
@@ -5,7 +5,11 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+    <header>
     <h1>Ementa do curso</h1>
+    </header>
+
+    <section id="1s">
         <h2>Primeiro Semestre</h2>
             <p class="mat">Lógica de programação</p>
             <p class="ch">60</p>
@@ -17,6 +21,9 @@
             <p class="ch">60</p>
             <p class="mat">Inglês I</p>
             <p class="ch">60</p>
+    </section>
+
+    <section id="2s">
         <h2>Segundo Semestre</h2>
             <p class="mat">Linguagem de programção</p>
             <p class="ch">60</p>
@@ -28,6 +35,9 @@
             <p class="ch">60</p>
             <p class="mat">Inglês II</p>
             <p class="ch">60</p>
+    </section>
+
+    <section id="3s">
         <h2>Terceiro Semestre</h2>
             <p class="mat">LPOO I</p>
             <p class="ch">60</p>
@@ -41,6 +51,9 @@
             <p class="ch">60</p>
             <p class="mat">Interação Humano-Computador</p>            
             <p class="ch">60</p>
+    </section>
+    
+    <section id="4s">
         <h2>Quarto Semestre</h2>
             <p class="mat">LPOO II</p>
             <p class="ch">60</p>
@@ -54,6 +67,9 @@
             <p class="ch">60</p>
             <p class="mat">Introdução a segurança da informação</p>
             <p class="ch">60</p>
+    </section>    
+
+    <section id="5s">
         <h2>Quinto Semestre</h2>
             <p class="mat">Programação web I</p>
             <p class="ch">60</p>
@@ -67,6 +83,9 @@
             <p class="ch">60</p>
             <p class="mat">Sistemas distribuídos</p>
             <p class="ch">60</p>
+    </section>
+
+    <section id="6s">
         <h2>Sexto Semestre</h2>
             <p class="mat">Programação web II</p>
             <p class="ch">60</p>
@@ -80,4 +99,5 @@
             <p class="ch">60</p>
             <p class="mat">Relações étnicos-raciais</p>
             <p class="ch">60</p>
+    </section>
 </body>
