--- a/Index/index.html
+++ b/Index/index.html
@@ -2,6 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <title>ADS | Análise e Desenvolvimento de Sistemas</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
@@ -9,95 +12,103 @@
     <h1>Ementa do curso</h1>
     </header>
 
-    <section id="1s">
-        <h2>Primeiro Semestre</h2>
-            <p class="mat">Lógica de programação</p>
-            <p class="ch">60</p>
-            <p class="mat">Introdução a computação</p>
-            <p class="ch">60</p>
-            <p class="mat">Arquitetura de Computadores e Software Básico</p>
-            <p class="ch">60</p>
-            <p class="mat">Introdução a matemática</p>
-            <p class="ch">60</p>
-            <p class="mat">Inglês I</p>
-            <p class="ch">60</p>
-    </section>
 
-    <section id="2s">
-        <h2>Segundo Semestre</h2>
-            <p class="mat">Linguagem de programção</p>
-            <p class="ch">60</p>
-            <p class="mat">Sistemas operacionais</p>
-            <p class="ch">60</p>
-            <p class="mat">Fundamentos de Redes de computadores</p>
-            <p class="ch">60</p>
-            <p class="mat">Leitura e produção textual</p>
-            <p class="ch">60</p>
-            <p class="mat">Inglês II</p>
-            <p class="ch">60</p>
-    </section>
+    <div class="container">
+        <section id="1s" class="seme um">
+            <h2>1° Semestre</h2>
+                <p class="mat blue">Lógica de programação</p>
+                <p class="ch">60</p>
+                <p class="mat blue">Introdução a computação</p>
+                <p class="ch">60</p>
+                <p class="mat blue">Arquitetura de Computadores e Software Básico</p>
+                <p class="ch">60</p>
+                <p class="mat blue">Introdução a matemática</p>
+                <p class="ch">60</p>
+                <p class="mat blue">Inglês I</p>
+                <p class="ch">60</p>
+                <p class="mat blank"></p>
+                <p class="ch blank">00</p>
+        </section>
 
-    <section id="3s">
-        <h2>Terceiro Semestre</h2>
-            <p class="mat">LPOO I</p>
-            <p class="ch">60</p>
-            <p class="mat">Estrutura de dados</p>
-            <p class="ch">60</p>
-            <p class="mat">Análise de projeto de Sistemas</p>
-            <p class="ch">60</p>
-            <p class="mat">Laboratório de Redes de Computadores</p>
-            <p class="ch">60</p>
-            <p class="mat">Fundamentos de Eletricidade e Instalação de Hardware</p>
-            <p class="ch">60</p>
-            <p class="mat">Interação Humano-Computador</p>            
-            <p class="ch">60</p>
-    </section>
-    
-    <section id="4s">
-        <h2>Quarto Semestre</h2>
-            <p class="mat">LPOO II</p>
-            <p class="ch">60</p>
-            <p class="mat">Modelagem de banco de dados</p>
-            <p class="ch">60</p>
-            <p class="mat">Engenharia de software I</p>
-            <p class="ch">60</p>
-            <p class="mat">Metodologia da pesquisa</p>
-            <p class="ch">60</p>
-            <p class="mat">Programação para dispositivos web</p>
-            <p class="ch">60</p>
-            <p class="mat">Introdução a segurança da informação</p>
-            <p class="ch">60</p>
-    </section>    
+        <section id="2s" class="seme dois">
+            <h2>2° Semestre</h2>
+                <p class="mat blue">Linguagem de programção</p>
+                <p class="ch">60</p>
+                <p class="mat blue">Sistemas operacionais</p>
+                <p class="ch">60</p>
+                <p class="mat blue">Fundamentos de Redes de computadores</p>
+                <p class="ch">60</p>
+                <p class="mat blue">Leitura e produção textual</p>
+                <p class="ch">60</p>
+                <p class="mat blue">Inglês II</p>
+                <p class="ch">60</p>
+                <p class="mat blank"></p>
+                <p class="ch blank">00</p>
+        </section>
 
-    <section id="5s">
-        <h2>Quinto Semestre</h2>
-            <p class="mat">Programação web I</p>
-            <p class="ch">60</p>
-            <p class="mat">Banco de dados</p>
-            <p class="ch">60</p>
-            <p class="mat">Engenharia de software I</p>
-            <p class="ch">60</p>
-            <p class="mat">Projeto de inovação</p>
-            <p class="ch">60</p>
-            <p class="mat">Optativa I</p>
-            <p class="ch">60</p>
-            <p class="mat">Sistemas distribuídos</p>
-            <p class="ch">60</p>
-    </section>
+        <section id="3s" class="seme tres">
+            <h2>3° Semestre</h2>
+                <p class="mat">LPOO I</p>
+                <p class="ch">60</p>
+                <p class="mat">Estrutura de dados</p>
+                <p class="ch">60</p>
+                <p class="mat">Análise de projeto de Sistemas</p>
+                <p class="ch">60</p>
+                <p class="mat">Laboratório de Redes de Computadores</p>
+                <p class="ch">60</p>
+                <p class="mat">Fundamentos de Eletricidade e Instalação de Hardware</p>
+                <p class="ch">60</p>
+                <p class="mat">Interação Humano-Computador</p>            
+                <p class="ch">60</p>
+        </section>
+        
+        <section id="4s" class="seme quatro">
+            <h2>4° Semestre</h2>
+                <p class="mat">LPOO II</p>
+                <p class="ch">60</p>
+                <p class="mat">Modelagem de banco de dados</p>
+                <p class="ch">60</p>
+                <p class="mat">Engenharia de software I</p>
+                <p class="ch">60</p>
+                <p class="mat">Metodologia da pesquisa</p>
+                <p class="ch">60</p>
+                <p class="mat">Programação para dispositivos web</p>
+                <p class="ch">60</p>
+                <p class="mat">Introdução a segurança da informação</p>
+                <p class="ch">60</p>
+        </section>    
 
-    <section id="6s">
-        <h2>Sexto Semestre</h2>
-            <p class="mat">Programação web II</p>
-            <p class="ch">60</p>
-            <p class="mat">Gerência de projetos</p>
-            <p class="ch">60</p>
-            <p class="mat">Optativa II</p>
-            <p class="ch">60</p>
-            <p class="mat">TCC</p>
-            <p class="ch">60</p>
-            <p class="mat">Empreendorismo</p>
-            <p class="ch">60</p>
-            <p class="mat">Relações étnicos-raciais</p>
-            <p class="ch">60</p>
-    </section>
+        <section id="5s" class="seme cinco">
+            <h2>5° Semestre</h2>
+                <p class="mat">Programação web I</p>
+                <p class="ch">60</p>
+                <p class="mat">Banco de dados</p>
+                <p class="ch">60</p>
+                <p class="mat">Engenharia de software II</p>
+                <p class="ch">60</p>
+                <p class="mat">Projeto de inovação</p>
+                <p class="ch">60</p>
+                <p class="mat orange">Optativa I</p>
+                <p class="ch">60</p>
+                <p class="mat">Sistemas distribuídos</p>
+                <p class="ch">60</p>
+        </section>
+
+        <section id="6s" class="seme seis">
+            <h2>6° Semestre</h2>
+                <p class="mat">Programação web II</p>
+                <p class="ch">60</p>
+                <p class="mat">Gerência de projetos</p>
+                <p class="ch">60</p>
+                <p class="mat orange">Optativa II</p>
+                <p class="ch">60</p>
+                <p class="mat">TCC</p>
+                <p class="ch">60</p>
+                <p class="mat">Empreendorismo</p>
+                <p class="ch">60</p>
+                <p class="mat">Relações étnicos-raciais</p>
+                <p class="ch">60</p>
+        </section>
+
+    </div>
 </body>
